# ai-stock

./: .eslintrc.cjs  .gitignore  Cargo.toml  README.md  deny.toml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  widget.html
.github/workflows/: ci.yml
app/: Cargo.toml  tauri.conf.json
app/capabilities/: default.json
app/icons/: icon.icns
app/src/: ipc.rs  main.rs  tauri_notifier.rs  wiring.rs
crates/application/: Cargo.toml
crates/application/src/: ai_service.rs  alert_service.rs  fx_rate_book.rs  indicator_service.rs  lib.rs  market_service.rs  poll_scheduler.rs  portfolio_service.rs  settings_service.rs
crates/application/src/ports/: ai_provider.rs  asset_provider.rs  clock.rs  http_client.rs  mod.rs  news_provider.rs  notifier.rs  repos.rs  secret_store.rs
crates/domain/: Cargo.toml
crates/domain/src/: alert.rs  asset.rs  candle.rs  conversation.rs  fx.rs  holding.rs  lib.rs  money.rs  percent.rs  portfolio.rs  portfolio_calc.rs  price.rs  prompt.rs  quantity.rs  quote.rs  sanity.rs  symbol.rs  time_range.rs  watchlist.rs
crates/domain/src/indicators/: bollinger.rs  ema.rs  macd.rs  mod.rs  rsi.rs  sma.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/migrations/: 20260513000001_init.sql  20260514000001_alerts.sql  20260515000001_alerts_indicator.sql
crates/infrastructure/src/: clock.rs  http.rs  keyring_secrets.rs  lib.rs
crates/infrastructure/src/news/: coindesk_rss.rs  mod.rs  yahoo_rss.rs
crates/infrastructure/src/providers/: anthropic.rs  binance.rs  coingecko.rs  finnhub.rs  gemini.rs  kis.rs  mod.rs  naver_kr.rs  openai.rs  yahoo.rs
crates/infrastructure/src/sqlite/: alert_repo.rs  mod.rs  portfolio_repo.rs  settings_repo.rs  watchlist_repo.rs
docs/: CONTEXT.md  RELEASE.md  progress.md
docs/adr/: 0001-canonical-symbol-with-per-provider-translation.md  0002-polling-only-for-m1.md  0003-grep-based-layer-check-and-naver-scraping.md  0004-byok-ai-streaming-architecture.md  0005-kis-open-api-provider.md  0006-fx-rates-cross-currency-portfolio.md  0007-multi-turn-ai-conversation.md
docs/superpowers/plans/: 2026-05-13-ai-stock-m1-core.md  2026-05-13-ai-stock-m2-indicators-alerts-kr.md  2026-05-13-ai-stock-m3-ai-byok.md  2026-05-17-m4-ai-assistant.md  2026-05-17-m5-local-release.md  2026-05-17-widget-row-alignment.md
docs/superpowers/specs/: 2026-05-13-ai-stock-design.md  2026-05-17-m4-ai-assistant-design.md  2026-05-17-m5-local-release-design.md  2026-05-17-widget-row-alignment-design.md
e2e/: wdio.conf.ts
e2e/specs/: golden-path.e2e.ts
scripts/: check-layer-boundary.sh
src/: App.tsx  index.css  main.tsx  widget.tsx
src/components/: AddSymbolDialog.tsx  AiPanel.tsx  AlertsPanel.tsx  ChartPanel.tsx  DetailPane.tsx  PortfolioPanel.tsx  Select.tsx  Settings.tsx  Toasts.tsx  Watchlist.tsx
src/components/widget/: WidgetRow.tsx
src/i18n/: en.json  ko.json
src/lib/: format.ts  ipc.ts  timezone.ts
src/lib/state/: aiStore.test.ts  aiStore.ts  portfolioStore.ts  quotesStore.test.ts  quotesStore.ts  settingsStore.ts  themeStore.ts  toastStore.test.ts  toastStore.ts  watchlistStore.ts
