[workspace]
resolver = "2"
members = ["crates/domain", "crates/application", "crates/infrastructure", "app"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["WillowRyu"]

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }
keyring = "2"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
mockall = "0.12"
wiremock = "0.6"
proptest = "1"
insta = { version = "1", features = ["yaml"] }
tokio-test = "0.4"
tempfile = "3"
