[package]
name = "ai-stock-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
domain = { path = "../crates/domain" }
application = { path = "../crates/application" }
infrastructure = { path = "../crates/infrastructure" }
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal = { workspace = true }
chrono.workspace = true
