[package]
name = "application"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain" }
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
mockall = { workspace = true }

[dev-dependencies]
tokio-test.workspace = true
